LegUp/214_benchmarks/extr_.reactosdllopenglmesaxform.c_gl_xform_points_4fv_with_main/log.txt
# annotate loop labels
../../../mark_labels.pl extr_.reactosdllopenglmesaxform.c_gl_xform_points_4fv_with_main.c > extr_.reactosdllopenglmesaxform.c_gl_xform_points_4fv_with_main_labeled.c
# produces pre-link time optimization binary bitcode: extr_.reactosdllopenglmesaxform.c_gl_xform_points_4fv_with_main.prelto.bc
clang extr_.reactosdllopenglmesaxform.c_gl_xform_points_4fv_with_main_labeled.c -emit-llvm -c -fno-builtin -m32 -I ../../../lib/include/ -I /usr/include/i386-linux-gnu -O3 -o extr_.reactosdllopenglmesaxform.c_gl_xform_points_4fv_with_main.prelto.1.bc
extr_.reactosdllopenglmesaxform.c_gl_xform_points_4fv_with_main_labeled.c:70:13: error: expected identifier or '('
  GLfloat (*)[4] q;
            ^
extr_.reactosdllopenglmesaxform.c_gl_xform_points_4fv_with_main_labeled.c:72:13: error: expected identifier or '('
  GLfloat (*)[4] p;
            ^
extr_.reactosdllopenglmesaxform.c_gl_xform_points_4fv_with_main_labeled.c:73:26: error: use of undeclared identifier 'q'
  gl_xform_points_4fv(n, q, m, p);
                         ^
3 errors generated.
make: *** [all] Error 1
